--- a/PartyPlanner.html
+++ b/PartyPlanner.html
@@ -6,9 +6,14 @@
 	<title>Unit 02 Block 21 - Party Planner</title>
 </head>
 <body>
-	<script>
+	<!-- Create display of information form API -->
+	<h1> Events</h1>
+	<ul id="CurrentEvents"></ul>
 
-		
-	</script>
+	<!--Create an button option Delete option -->
+
+	<!--Create an add even option -->
+
+	<script src="index.PartyPlanner.js"></script>
 </body>
 </html>
