--- a/PartyPlanner.html
+++ b/PartyPlanner.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Events</h1>
     <hr />
-    <!--Create an add even option -->
+    <!--Create an add event option -->
     <h2>Add New Event:</h2>
     <hr />
     <br />
